--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -5,6 +5,8 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>WeTube</title>
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 
 <header th:fragment="header">
