--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -16,6 +16,11 @@
         </a>
     </div>
     <div class="header__column">
+        <form th:action="@{/search}" method="get">
+            <input type="text" placeholder="Search by term..." name="term">
+        </form>
+    </div>
+    <div class="header__column">
         <ul>
             <li>
                 <a th:href="@{/join}">Join</a>
