refactor: Change Profile HTML

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -5,7 +5,7 @@
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
-    <div class="form__container">
+    <div class="form-container">
         <form th:action="@{/join}" method="post">
             <input type="text" name="name" placeholder="Full Name">
             <input type="email" name="email" placeholder="Email">
