--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
-    <div class="form__container">
+    <div class="form-container">
         <form th:action="@{/login}" method="post">
             <input type="email" name="email" placeholder="Email">
             <input type="password" name="password" placeholder="Password">
