--- a/src/main/resources/templates/videos/upload.html
+++ b/src/main/resources/templates/videos/upload.html
@@ -5,7 +5,15 @@
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
-    <p>Hello</p>
+    <div class="form-container">
+        <form th:action="@{/videos}" method="post">
+            <label for="file">Video File</label>
+            <input type="file" id="file" name="file">
+            <input type="text" placeholder="Title" name="title">
+            <textarea name="description" placeholder="Description"></textarea>
+            <input type="submit" value="Upload Video">
+        </form>
+    </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
