refactor: Home Controller

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,10 @@
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
     <div class="videos">
-        <div th:each="item : ${videos}">
-            <h1 th:text="${item.title}"></h1>
-            <p th:text="${item.description}"></p>
+        <div th:each="item : ${videos}" class="videoBlock">
+            <video th:src="${item.videoFile}" class="videoBlock__thumbnail" controls="true"></video>
+            <h4 class="videoBlock__title" th:text="${item.title}"></h4>
+            <h6 class="videoBlock__views" th:text="${item.views}"></h6>
         </div>
     </div>
 </body>
