--- a/src/main/resources/templates/videos/search.html
+++ b/src/main/resources/templates/videos/search.html
@@ -8,6 +8,13 @@
     <div class="search__header">
         <h3 th:text="'Searching for: ' +  ${searchingBy}"></h3>
     </div>
+    <div class="search__videos">
+        <div th:each="item : ${videos}" class="videoBlock">
+            <video th:src="${item.videoFile}" class="videoBlock__thumbnail" controls="true"></video>
+            <h4 class="videoBlock__title" th:text="${item.title}"></h4>
+            <h6 class="videoBlock__views" th:text="${item.views}"></h6>
+        </div>
+    </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
