--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -5,7 +5,7 @@
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
-    <p>Hello</p>
+    <p>Video Detail</p>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
