feat: Video upload/create/read

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title th:text="${pageTitle}">WeTube</title>
-<!--    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>-->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-
 <header th:fragment="header" class="header">
+    <div class="header__column"><a th:href="@{/}"> <i class="fab fa-youtube"></i> </a></div>
     <div class="header__column">
-        <a th:href="@{/}">
-            <i class="fab fa-youtube"></i>
-        </a>
-    </div>
-    <div class="header__column">
-        <form th:action="@{/search}" method="get">
-            <input type="text" placeholder="Search by term..." name="term">
-        </form>
+        <form th:action="@{/search}" method="get"><input type="text" placeholder="Search by term..." name="term"></form>
     </div>
     <div class="header__column">
         <ul sec:authorize="!isAuthenticated()">
-            <li>
-                <a th:href="@{/join}">Join</a>
-            </li>
+            <li><a th:href="@{/join}">Join</a></li>
             <li>
                 <a th:href="@{/login}">Log In</a>
             </li>
