--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
     <div class="videos">
         <div th:each="item : ${videos}" class="videoBlock">
             <a th:href="@{'/videos/' + ${item.id}}">
-                <video th:src="${item.videoFile}" class="videoBlock__thumbnail" controls="true"></video>
+                <video th:src="@{${item.videoFile}}" class="videoBlock__thumbnail" controls="true"></video>
                 <h4 class="videoBlock__title" th:text="${item.title}"></h4>
                 <h6 class="videoBlock__views" th:text="${item.views}"></h6>
             </a>
