--- a/src/main/resources/templates/videos/search.html
+++ b/src/main/resources/templates/videos/search.html
@@ -10,9 +10,11 @@
     </div>
     <div class="search__videos">
         <div th:each="item : ${videos}" class="videoBlock">
-            <video th:src="${item.videoFile}" class="videoBlock__thumbnail" controls="true"></video>
-            <h4 class="videoBlock__title" th:text="${item.title}"></h4>
-            <h6 class="videoBlock__views" th:text="${item.views}"></h6>
+            <a th:href="@{'/videos/' + ${item.id}}">
+                <video th:src="'/videos/download?fileUrl=' + ${item.videoFile}" class="videoBlock__thumbnail" controls="true"></video>
+                <h4 class="videoBlock__title" th:text="${item.title}"></h4>
+                <h6 class="videoBlock__views" th:text="${item.views}"></h6>
+            </a>
         </div>
     </div>
 </body>
