--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -5,7 +5,15 @@
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
-    <p>Video Detail</p>
+    <div class="video__player">
+        <video th:src="@{'/' + video.fileUrl}"></video>
+    </div>
+    <div class="video__info">
+        <a th:href="@{'/video/' + ${video.id} + '/edit'}">Edit Video</a>
+        <h5 class="video__title" th:text="${video.title}">Video Title</h5>
+        <span class="video__views" th:text="${video.views}">0</span>
+        <p class="video__description" th:text="${video.description}">Video Description</p>
+    </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
