--- a/src/main/resources/templates/videos/editVideo.html
+++ b/src/main/resources/templates/videos/editVideo.html
@@ -6,9 +6,12 @@
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
     <div class="form-container">
-        <form th:action="@{'/videos/' + ${id}}" method="post">
-            <input type="text" name="title" placeholder="Title">
-            <textarea name="description" placeholder="Description"></textarea>
+<!--        <form th:action="@{'/videos/' + ${id}}" method="post">-->
+        <form th:object="${videoUpdateForm}" th:action="@{'/videos/' + ${id}} + '/edit'" th:method="put">
+<!--            <input type="text" name="title" placeholder="Title" th:field="*{title}">-->
+<!--            <textarea name="description" placeholder="Description" th:field="*{description}"></textarea>-->
+            <input type="text" name="title" placeholder="Title" th:field="*{title}" th:value="${video.title}">
+            <textarea name="description" placeholder="Description" th:field="*{description}" th:text="${video.description}"></textarea>
             <input type="submit" value="Update Video">
         </form>
         <a th:href="@{'/videos/' + ${id}}" class="form-container__link form-container__link--delete">
