--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -14,6 +14,10 @@
         <span class="video__views" th:text="${video.views}">0</span>
         <p class="video__description" th:text="${video.description}">Video Description</p>
     </div>
+    <div class="video__comment">
+        <span th:if="${video.comments.size()} == 1" th:text="${video.comments.size()} + ' comment'" class="video__comment-number"></span>
+        <span th:if="${video.comments.size()} >= 1" th:text="${video.comments.size()} + ' comments'" class="video__comment-number"></span>
+    </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
