--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -16,7 +16,7 @@
     </div>
     <div class="video__comment">
         <span th:if="${video.comments.size()} == 1" th:text="${video.comments.size()} + ' comment'" class="video__comment-number"></span>
-        <span th:if="${video.comments.size()} >= 1" th:text="${video.comments.size()} + ' comments'" class="video__comment-number"></span>
+        <span th:if="${video.comments.size()} > 1" th:text="${video.comments.size()} + ' comments'" class="video__comment-number"></span>
     </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
