--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -6,36 +6,39 @@
     <title th:text="${pageTitle}">WeTube</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <header th:fragment="header" class="header">
-    <div class="header__column">
-        <a th:href="@{/}">
-            <i class="fab fa-youtube"></i>
-        </a>
-    </div>
-    <div class="header__column">
-        <form th:action="@{/search}" method="get">
-            <input type="text" placeholder="Search by term..." name="keyword">
-        </form>
-    </div>
-    <div class="header__column">
-        <ul sec:authorize="!isAuthenticated()">
-            <li><a th:href="@{/join}">Join</a></li>
-            <li>
-                <a th:href="@{/login}">Log In</a>
-            </li>
-        </ul>
-        <ul sec:authorize="isAuthenticated()">
-            <li>
-                <a th:href="@{/videos/upload}">Upload</a>
-            </li>
-            <li>
-                <a th:href="@{'/members/'+ ${#authentication.name}}">Profile</a>
-            </li>
-            <form th:action="@{/logout}" method="post">
-                <button type="submit">Logout</button>
+    <div class="header__wrapper">
+        <div class="header__column">
+            <a th:href="@{/}">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
+        <div class="header__column">
+            <form th:action="@{/search}" method="get">
+                <input type="text" placeholder="Search by term..." name="keyword">
             </form>
-        </ul>
+        </div>
+        <div class="header__column">
+            <ul sec:authorize="!isAuthenticated()">
+                <li><a th:href="@{/join}">Join</a></li>
+                <li>
+                    <a th:href="@{/login}">Log In</a>
+                </li>
+            </ul>
+            <ul sec:authorize="isAuthenticated()">
+                <li>
+                    <a th:href="@{/videos/upload}">Upload</a>
+                </li>
+                <li>
+                    <a th:href="@{'/members/'+ ${#authentication.name}}">Profile</a>
+                </li>
+                <form th:action="@{/logout}" method="post">
+                    <button type="submit">Logout</button>
+                </form>
+            </ul>
+        </div>
     </div>
 </header>
 
