--- a/src/main/resources/templates/videos/editVideo.html
+++ b/src/main/resources/templates/videos/editVideo.html
@@ -4,17 +4,17 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
-    <header th:replace="fragments/fragments.html :: header"></header>
-    <div class="form-container">
-        <form th:object="${videoUpdateForm}" th:action="@{'/videos/' + ${id} + '/edit'}" th:method="put">
-            <input type="text" name="title" placeholder="Title" th:field="*{title}">
-            <textarea name="description" placeholder="Description" th:field="*{description}"></textarea>
-            <input type="submit" value="Update Video">
-        </form>
-        <a th:href="@{'/videos/' + ${id} + '/delete'}" class="form-container__link form-container__link--delete">
-            Delete Video
-        </a>
-    </div>
+<header th:replace="fragments/fragments.html :: header"></header>
+<div class="form-container">
+    <form th:object="${videoUpdateForm}" th:action="@{'/videos/' + ${id} + '/edit'}" th:method="put">
+        <input type="text" name="title" placeholder="Title" th:field="*{title}">
+        <textarea name="description" placeholder="Description" th:field="*{description}"></textarea>
+        <input type="submit" value="Update Video">
+    </form>
+    <a th:href="@{'/videos/' + ${id} + '/delete'}" class="form-container__link">
+        <button class="delete">Delete Video</button>
+    </a>
+</div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
