refactor: Join Validator & Test

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -4,9 +4,12 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title th:text="${pageTitle}">WeTube</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 <header th:fragment="header" class="header">
     <div class="header__wrapper">
@@ -52,17 +55,19 @@
 <div th:fragment="social-login" class="social-login">
     <a th:href="@{/auth/github}">
         <button class="social-login--github">
-        <span>
-            <i class="fab fa-github"></i>
-            Continue with Github
-        </span>
+            <span>
+                <i class="fab fa-github"></i>
+                Continue with Github
+            </span>
         </button>
     </a>
-    <button class="social-login--facebook">
-        <span>
-            <i class="fab fa-facebook-square"></i>
-            Continue with Github
-        </span>
-    </button>
+<!--    <button class="social-login&#45;&#45;facebook">-->
+<!--        <a th:href="@{/auth/facebook}">-->
+<!--            <span>-->
+<!--                <i class="fab fa-facebook-square"></i>-->
+<!--                Continue with Github-->
+<!--            </span>-->
+<!--        </a>-->
+<!--    </button>-->
 </div>
 </html>
