--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -7,9 +7,12 @@
     <header th:replace="fragments/fragments.html :: header"></header>
     <div class="form-container">
         <form th:object="${memberJoinForm}" th:action="@{/join}" method="post">
-            <input type="text" th:field="*{name}" name="name" placeholder="Full Name">
             <input type="email" th:field="*{email}" name="email" placeholder="Email">
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+            <input type="text" th:field="*{name}" name="name" placeholder="Full Name">
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name</small>
             <input type="password" th:field="*{password}" name="password" placeholder="Password">
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
             <input type="password" th:field="*{password2}" name="password2" placeholder="Verify Password">
             <input type="submit" value="Join Now">
         </form>
