--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jdenticon@3.0.1" async></script>
 </head>
 <header th:fragment="header" class="header">
     <div class="header__wrapper">
@@ -53,14 +54,14 @@
 </footer>
 
 <div th:fragment="social-login" class="social-login">
-    <a th:href="@{/auth/github}">
-        <button class="social-login--github">
-            <span>
-                <i class="fab fa-github"></i>
-                Continue with Github
-            </span>
-        </button>
-    </a>
+<!--    <a th:href="@{/login/github}">-->
+<!--        <button class="social-login&#45;&#45;github">-->
+<!--            <span>-->
+<!--                <i class="fab fa-github"></i>-->
+<!--                Continue with Github-->
+<!--            </span>-->
+<!--        </button>-->
+<!--    </a>-->
 <!--    <button class="social-login&#45;&#45;facebook">-->
 <!--        <a th:href="@{/auth/facebook}">-->
 <!--            <span>-->
