--- a/src/main/resources/templates/users/userDetail.html
+++ b/src/main/resources/templates/users/userDetail.html
@@ -4,21 +4,24 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
-    <header th:replace="fragments/fragments.html :: header"></header>
-    <div class="user-profile">
-        <div class="user-profile__header">
-            <img th:src="${member.avatarUrl}" alt="" class="avatar">
-            <h4 class="profile__username" th:text="${member.name}"></h4>
-        </div>
-        <div class="user-profile__btns">
-            <a href="/members/edit-profile">
-                <button>Edit Profile</button>
-            </a>
-            <a href="/members/change-password">
-                <button>🔒 Change Password</button>
-            </a>
-        </div>
+<header th:replace="fragments/fragments.html :: header"></header>
+<div class="user-profile">
+    <div class="user-profile__header">
+        <svg th:if="${#strings.isEmpty(member.profileImage)}" class="avatar"
+             th:data-jdenticon-value="${member.name}" width="125" height="125"></svg>
+        <img th:if="${!#strings.isEmpty(member.profileImage)}"
+             th:src="${member.profileImage}" class="avatar" width="125" height="125">
+        <h4 class="profile__username" th:text="${member.name}"></h4>
     </div>
+    <div class="user-profile__btns">
+        <a href="/members/edit-profile">
+            <button>Edit Profile</button>
+        </a>
+        <a href="/members/change-password">
+            <button>🔒 Change Password</button>
+        </a>
+    </div>
+</div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 </html>
