--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
 <head th:replace="fragments/fragments.html :: head"></head>
 <body>
 <header th:replace="fragments/fragments.html :: header"></header>
+<div th:replace="fragments/fragments.html :: message"></div>
 <div class="home-videos">
     <div th:each="item : ${videos}" class="videoBlock">
         <a th:href="@{'/videos/' + ${item.id}}">
